# pogp

./: .gitignore  Cargo.toml  README.md  feedback.md  index.html  input.html  package.json  rust.html  scrap.md  vite.config.js
.bin/: build.sh  cloudflare-build.sh  pog
.github/workflows/: rust.yml
demo/: Cargo.toml  Pong.ts  htmlRender.ts  index.html  input.html  inputPreviewDemo.ts  package.json  pongDemo.ts
demo/src/: lib.rs  pong.rs  pong_config.rs
demo/unity/PogProtocolDemo/Assets/Scripts/: PogpNative.cs  PogpNativeVersion.cs
examples/: PogEnum.ts  enums.ts  index.html  input.html  input.ts  jest.config.cjs  lib.ts  package.json  tsconfig.json  types.d.ts
examples/src/: BinaryReader.ts  BinaryWriter.ts  BrowserInput.ts  GameLoop.ts  GamepadSnapshot.ts  KeyboardSnapshot.ts  MarshalInput.ts  input.ts  inputPreview.ts  lib.ts  pong.ts  types.d.ts
examples/test/: BinaryReader.test.js  BinaryWriter.test.js  KeyboardSnapshot.test.ts  MarshalInput.test.js  MarshalInput.test.ts  lib.test.js  lib.test.ts
rs/: Cargo.toml  README.md
rs/src/: lib.rs
rs/src/inputs/: key.rs  keyboard_input.rs  keyboard_snapshot.rs  mod.rs
src/: BinaryWriter.ts  GameLoop.ts  lib.rs  pong.ts
src/rs/: lib.rs
src/rs/inputs/: input_type.rs  key.rs  keyboard_input.rs  keyboard_snapshot.rs
src/ts/: GameLoop.ts  lib.ts  pong.ts  rust.ts
src/ts/demo/: Pong.ts  htmlRender.ts  inputPreviewDemo.ts  pongDemo.ts  types.d.ts
test/: MarshalInput.test.ts  lib.test.ts
test/ts/: BinaryReader.test.ts  BinaryWriter.test.ts  GamepadSnapshot.test.ts  KeyboardSnapshot.test.ts  MarshalInput.test.ts  lib.test.ts
ts/: README.md  package.json  tsconfig-skip-jest.json  tsconfig.json
ts/src/: BinaryReader.ts  BinaryWriter.ts  BrowserInput.ts  GameLoop.ts  KeyboardSnapshot.ts  MarshalInput.ts  enums.ts  index.ts  lib.ts  types.d.ts  types.ts
ts/test/: BinaryReader.test.ts  BinaryWriter.test.ts  GamepadSnapshot.test.ts  KeyboardSnapshot.test.ts  MarshalInput.test.ts  lib.test.ts
unity/PogProtocolDemo/Assets/Plugins/: pogp_demo.dylib
unity/PogProtocolDemo/Assets/Plugins/Editor/: pogp_demo-419B55C7-D445-452B-A82C-5E86A150FFB6.dylib  pogp_demo-4741F422-AC6A-410B-A211-97EC82F0007C.dylib  pogp_demo-493E4CE8-E5BF-4EEE-8F5F-55C9E279CE99.dylib  pogp_demo-6C39555E-CFAD-470D-861D-FE471A28BFF8.dylib  pogp_demo-ABC67659-DADD-4B27-AD1B-D38FCDA01235.dylib
unity/PogProtocolDemo/Assets/Scenes/: SampleScene.unity
unity/PogProtocolDemo/Assets/Scripts/: GameState.cs  PogpNative.cs  PogpNativeVersion.cs  PongDemo.cs
unity/PogProtocolDemo/ProjectSettings/: ProjectSettings.asset
