[package]
name = "pogp-demo"
version = "0.0.12"
edition = "2021"
authors = ["Neil Sarkar <neil@nullent.com>"]
description = "This demonstrates the use of pogp for a pong game in browser and unity"
repository = "https://github.com/neilsarkar/pogp"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
pogp = { path = "../rs"}
cfg-if = "1.0.0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	"console"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
