[package]
name = "pogp"
version = "0.0.4"
edition = "2021"
authors = ["Neil Sarkar <neil@nullent.com>"]
description = "The POG Protocol defines language-neutral binary and json representations of Inputs and State."
repository = "https://github.com/neilsarkar/pogp"
license = "MIT OR Apache-2.0"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	"console"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
