[package]
name = "pogp"
version = "0.0.5"
edition = "2021"
authors = ["Neil Sarkar <neil@nullent.com>"]
description = "The POG Protocol defines language-neutral binary and json representations of Inputs and State."
repository = "https://github.com/neilsarkar/pogp"
license = "MIT OR Apache-2.0"

[profile.release]
# Tell `rustc` to optimize for small code size for wasm targets.
opt-level = "s"
