[package]
name = "pogp"
version = "0.0.6"
edition = "2021"
authors = ["Neil Sarkar <neil@nullent.com>"]
description = "The POG Protocol for game development defines a portable game loop and language-neutral binary representations of Inputs and State."
repository = "https://github.com/neilsarkar/pogp"
license = "MIT OR Apache-2.0"

[profile.release]
# Tell `rustc` to optimize for small code size for wasm targets.
opt-level = "s"
